# REDTeam

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  REDTeam.md  ROADMAP.md  metadata.yml  pyproject.toml  release-template.yml  requirements-dev.txt  requirements.txt  tools.json  version.yml
.github/: CODEOFCONDUCT.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  MAINTAINERS.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.yml
.github/workflows/: ci.yml  security-scan.yml
Docs/: Architecture.md  architecture.md
docs/: README.md  REDTeam.md  architecture.md  glossary.md  information.md  methodology.md  opsec.md  rules-of-engagement.md  tools.md
range/: README.md  architecture.md
range/scenarios/scenario_01_ad_breach/: README.md
reports/: README.md  technical_support.md
reports/templates/: executive_summary.md  findings_template.md
rtops/: README.md  cli.py  init.py
rtops/initial_access/: init.py  phishing_sim.py
rtops/lateral_movement/: init.py  smb_enum.py
rtops/persistence/: basic_persistence.py  init.py
rtops/recon/: active_recon.py  init.py  passive_recon.py
rtops/utils/: config_loader.py  init.py  loggin_utils.py  tools_loader.py
scripts/: README.md  generate_reports.sh  infralabsetup.sh  opsec_checklist.sh  redteamctl.sh  template.sh  tools-sync.sh  tools.sh
supports/: redteam.sh
tests/: test_recon.py  test_utils.py
