[tool.poetry]
name = "redteam-rtops"
version = "1.0.0"
description = "REDTeam toolkit for lab-only reconnaissance, initial access simulation, lateral movement and persistence."
authors = ["The MadDoG.tmdg"]
license = "UNLICENSED"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["redteam", "security", "recon", "phishing", "pentest", "lab"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
requests = "^2.31"
PyYAML = "^6.0"
cryptography = "^41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^24.3"
ruff = "^0.12"
flake8 = "^6.1"
mypy = "^1.5"
build = "^1.1"
sphinx = "^7.2"

[tool.poetry.scripts]
rtops = "rtops.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# BLACK
# -----------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

# -----------------------------
# RUFF (corrigé)
# -----------------------------
[tool.ruff]
line-length = 88

# Sélection des règles Ruff
select = ["E", "F", "W", "C", "N"]

# IMPORTANT : W503 supprimé (incompatible Ruff)
ignore = ["E203"]

# -----------------------------
# FLAKE8 (compatible)
# -----------------------------
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

# -----------------------------
# MYPY
# -----------------------------
[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
strict = false
